<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/IS"
        android:layout_width="417dp"
        android:layout_height="146dp"
        android:background="#2196F3">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="150dp"
            android:layout_height="31dp"
            android:layout_marginTop="10dp"
            android:background="#FBFAFA"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="#FFFDFD"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="126dp"
            android:layout_height="29dp"
            android:layout_marginTop="10dp"
            android:background="#FBFAFA"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#FFFDFD"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ISNocerrar"
            android:textColor="#FBFAFA"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <Button
            android:id="@+id/button"
            android:layout_width="76dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="#60BAE2"
            android:text="@string/ISEntrar"
            android:textSize="8sp"
            app:iconSize="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPassword" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/ISContraseña"
            android:textColor="#FBFAFA"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ISCorreoE"
            android:textColor="#FDFCFC"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.225" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/RS"
        android:layout_width="412dp"
        android:layout_height="582dp"
        android:background="#BEE2FD"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="146dp">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="164dp"
            android:layout_height="43dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
            app:layout_constraintTop_toTopOf="@+id/textView10">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/RSHOMBRE"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="82dp"
                android:layout_height="44dp"
                android:text="@string/RSMUJER"
                android:textSize="12sp" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/textView11"
            app:srcCompat="@drawable/calendario" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            app:srcCompat="@drawable/venus_marte" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/textView9"
            app:srcCompat="@drawable/cerrar" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:srcCompat="@drawable/sobre" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:srcCompat="@drawable/lapiz_de_usuario" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/lapiz_de_usuario" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="130dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:srcCompat="@drawable/facebook" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="124dp"
            android:layout_height="37dp"
            android:layout_marginTop="15dp"
            android:text="@string/RSCONTRASEÑA"
            android:textColor="#3F51B5"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Es gratis y lo seguirá siendo"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="REGISTRATE"
            android:textColor="#3F51B5"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/RSNombre"
            android:textColor="#3F51B5"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="167dp"
            android:layout_height="36dp"
            android:background="#FBFAFA"
            android:ems="10"
            android:inputType="date"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            tools:layout_editor_absoluteY="381dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/RSAPELLIDOS"
            android:textColor="#3F51B5"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="102dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/RSDIREC"
            android:textColor="#3F51B5"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/RSSEXO"
            android:textColor="#3F51B5"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="119dp"
            android:layout_height="47dp"
            android:layout_marginTop="35dp"
            android:text="@string/RSFECHAN"
            android:textColor="#3F51B5"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:background="#F6F4F4"
            android:ems="10"
            android:inputType="text"
            android:text="@string/RSINOMBRE"
            android:textColor="#3F51B5"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/RSIAPELLIDOS"
            android:textColor="#3F51B5"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/editTextText"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            android:background="#FBFAFA" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FBFAFA"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/RSICORREON"
            android:textColor="#3F51B5"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/editTextText2"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FBFAFA"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/RSICONTRASEÑA"
            android:textColor="#3F51B5"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress2"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:backgroundTint="#8BC34A"
            android:text="@string/BTNREGISTRO"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.928"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/RSPREG"
            android:textColor="#3F51B5"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>